infra/opensearch-k8s/base/dashboard/service.yaml
# base/dashboard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboard
  labels:
    app: opensearch-dashboard
spec:
  selector:
    app: opensearch-dashboard
  ports:
  - name: http
    port: 5601
    targetPort: 5601
