infra/opensearch-k8s/base/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-dashboard-ingress
  # namespace: opensearch
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - dashboard.opensearch.example.com
    secretName: opensearch-dashboard-tls-secret
  rules:
  - host: dashboard.opensearch.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opensearch-dashboard
            port:
              name: http
